fixing bug of home page on mobile

--- a/src/app/shared/components/articles/articles.component.scss
+++ b/src/app/shared/components/articles/articles.component.scss
@@ -19,8 +19,6 @@
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE and Edge */
     -webkit-overflow-scrolling: touch;
-    margin-top: 2%;
-    margin-bottom: 2%;
   }
 
   .articles-scroll::-webkit-scrollbar {
@@ -133,8 +131,35 @@
   }
 
   @media (max-width: 767px) and (orientation: portrait) {
-  .articles-section{
-    margin-bottom: 28%;
-    padding: 0px 16px;
+    .articles-section{
+      margin-bottom: 28%;
+      padding: 0px 16px;
+    }
   }
+
+  /* Animation scroll infinite */
+  .scroller {
+    overflow: hidden;
+    -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  }
+
+  .scroller__inner {
+    display: flex;
+    gap: 1rem;
+    padding-block: 1rem;
+    flex-wrap: nowrap;
+    width: max-content;
+    animation: scroll 20s linear infinite;
+  }
+
+  .scroller img {
+    min-width: 310px;
+    object-fit: cover;
+  }
+
+  @keyframes scroll {
+    to {
+        transform: translateX(-50vw);
+    }
   }
